refactor: dockerfile location

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,6 @@ services:
         - "3306:3306"
 
     bertram-bot:
-        build: .
+        build: ./docker
         depends_on:
             - mysql-service
